--- a/src/app/_components/copy-to-clipboard-button/copy-to-clipboard-button.component.scss
+++ b/src/app/_components/copy-to-clipboard-button/copy-to-clipboard-button.component.scss
@@ -10,13 +10,13 @@
     width: 50px;
     height: 50px;
     padding: 0.25rem;
-    border: transparent var(--border-width-medium) solid;
-    background-color: var(--app-white);
+    border: var(--border-width-thin) solid var(--color-border-default);
+    background-color: var(--color-bg-page);
     min-width: var(--min-hit-dimension-aaa);
     min-height: var(--min-hit-dimension-aaa);
 
     &:hover {
-      box-shadow: 0 4px 0 0 var(--ui-shadow-color);
+      box-shadow: var(--shadow-sm);
     }
 
     .svg-container {
@@ -24,7 +24,7 @@
       height: auto;
 
       svg {
-        fill: var(--app-black);
+        fill: var(--color-text-default);
         display: block;
       }
     }
